# newspeak

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: __init__.py  bench.py  benchmark_tts.py
modes/custom/: example.yaml.template
src/: index.html  pyproject.toml  server.py  tts.py
src/benchmarks/: bench.py
src/newspeak/: __init__.py  __main__.py  app.py  cli.py  config.py  paths.py  schemas.py
src/newspeak/adapters/: __init__.py  llm.py  tts.py  whisperx.py
src/newspeak/api/: http.py  websocket.py
src/newspeak/services/: audio.py  coach.py  container.py  container_modes.py  conversation.py  ports.py  prompts.py  text.py  tts_streaming.py
src/newspeak/services/modes/: __init__.py  builtin.py  loader.py
src/newspeak/web/static/: app.js  index.html  styles.css
tests/: test_audio.py  test_benchmarks.py  test_config_and_app.py  test_prompts.py  test_schemas_and_services.py
