[project]
name = "newspeak"
version = "0.1.0"
description = "On-device, real-time multimodal AI - have natural voice + vision conversations, fully local and private"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.135.3",
    "kokoro-onnx>=0.5.0; sys_platform == 'linux' or sys_platform == 'win32'",
    "openai>=1.0.0",
    "misaki[en]>=0.9.4; sys_platform == 'darwin'",
    "mlx-audio>=0.4.2; sys_platform == 'darwin' and extra != 'whisper'",
    "num2words>=0.5.14; sys_platform == 'darwin'",
    "huggingface-hub>=0.20.0",
    "numpy>=2.4.4",
    "pillow>=11.0.0",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.43.0",
    "pydantic-settings>=2.0.0",
    "websockets>=16.0",
]

[project.scripts]
newspeak-server = "newspeak.cli:main"

[project.optional-dependencies]
whisper = [
    "whisperx>=3.8.5; sys_platform == 'linux' or sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newspeak"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
